creating services and showing info

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,11 @@
-<p>navbar works!</p>
+<nav class="menu fixed-top">
+    <label for="" class="logo">MiLogo</label>
+    <ul class="menu-items">
+        <li (click)='showAndHideMenu()'><a href="#">Paisajes</a></li>
+        <li (click)='showAndHideMenu()'><a href="#">Fondos</a></li>
+        <li (click)='showAndHideMenu()'><a href="#">Flores</a></li>
+        <li (click)='showAndHideMenu()'><a href="#">Autos</a></li>
+    </ul>
+    <span class="btn-menu" (click)='showAndHideMenu()'><i class="fa fa-bars"></i></span>
+</nav>
+
