--- a/src/app/components/search-image/search-image.component.html
+++ b/src/app/components/search-image/search-image.component.html
@@ -1,1 +1,35 @@
-<p>search-image works!</p>
+<!--Start Carousel-->
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="position: relative;">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="../../../assets/image/img1.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../../../assets/image/img2.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../../../assets/image/img3.jpg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<!--End Carousel-->
+
+<div class="container my-5">
+  <form class="text-center form-group row">
+    <input type="text" class="form-control searchInput col-md-9" [(ngModel)]='inputContent' name="inputContent" placeholder="Search images...">
+    <input type="submit" class="btn btn-outline-search col-md-2" (click)='getImagesByInput()' value="Search">
+  </form>
+</div>
