--- a/src/app/components/show-image/show-image.component.html
+++ b/src/app/components/show-image/show-image.component.html
@@ -1,10 +1,14 @@
 <div class="gallery-container">
-    <div class="gallery-item" *ngFor='let image of images'>
+    <div class="gallery-item" *ngFor='let image of images; let i = index'>
         <div class="gallery-title">
-                <span class="mr-2">{{image.likes}} <i class="far fa-heart"></i></span>
-                <span class="mr-3">{{image.views}} <i class="far fa-eye"></i></span>
+            <span class="mr-2">{{image.likes}} <i class="far fa-heart"></i></span>
+            <span class="mr-3">{{image.views}} <i class="far fa-eye"></i></span>
         </div>
-            <img [src]="image.webformatURL" (click)='saveImg()' alt="" class="gallery-img">
+        <div class="gallery-download">
+            <a [href]="image.pageURL" target="__blank"><i class="fas fa-download mr-3"></i></a>
+        </div>
+
+        <img [src]="image.webformatURL" [alt]="image.tags" class="gallery-img">
+
     </div>
 </div>
-
