--- a/src/app/components/show-image/show-image.component.css
+++ b/src/app/components/show-image/show-image.component.css
@@ -4,7 +4,7 @@
     grid-auto-flow: dense;
     grid-auto-rows: 140px;
     padding: 5px;
-    grid-gap: 5px;
+    grid-gap: 4px;
 }
 
 .gallery-item {
@@ -18,32 +18,39 @@
     object-fit: cover;
     border-radius: 15px;
 }
+ /* Styles of gallery grid */
 .gallery-item:nth-child(1) {
     grid-column-start: span 2;
 }
 
-
 .gallery-item:nth-child(15) {
     grid-column-start: span 2;
 }
+
 .gallery-item:nth-child(17) {
     grid-row-start: span 2;
 }
+
 .gallery-item:nth-child(20) {
     grid-column-start: span 2;
 }
+
 .gallery-item:nth-child(22) {
     grid-row-start: span 2;
 }
+
 .gallery-item:nth-child(25) {
     grid-row-start: span 2;
 }
+
 .gallery-item:nth-child(28) {
     grid-column-start: span 2;
 }
+
 .gallery-item:nth-child(32) {
     grid-column-start: span 2;
 }
+
 .gallery-item:nth-child(38) {
     grid-column-start: span 2;
 }
@@ -51,14 +58,17 @@
 .gallery-item:nth-child(43) {
     grid-row-start: span 2;
 }
+
 .gallery-item:nth-child(47) {
     grid-column-start: span 2;
 }
+
 .gallery-item:nth-child(50) {
     grid-column-start: span 2;
 }
+/* End Styles of gallery grid */
 
-
+/* Styles of images and titles */
 .gallery-title {
     visibility: hidden;
     position: absolute;
@@ -66,24 +76,53 @@
     text-align: end;
     opacity: .8;
     color: white;
-    font-size: .6rem;
+    font-size: .8rem;
     background: linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 1));
     width: 100%;
     margin: 0;
     padding: 10px 0px;
-    border-radius: 15px;
+    border-radius: 0 0 15px 15px;
 }
 
-.gallery-item:hover .gallery-title {
+.gallery-download {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    text-align: end;
+    opacity: .8;
+    font-size: 1.1rem;
+    background: linear-gradient(rgba(0, 0, 0, 1),rgba(255, 255, 255, 0));
+    width: 100%;
+    margin: 0;
+    padding: 10px 0px;
+    border-radius: 15px 15px 0 0;
+}
+
+.gallery-download a{
+   color: white;
+}
+.fa-download:hover{
+    color: rgb(0, 243, 170);
+}
+
+.gallery-item:hover .gallery-title{
+    visibility: visible;
+}
+.gallery-item:hover .gallery-download {
     visibility: visible;
 }
 
-@media (min-width: 550px){
+
+/* setting media querys */
+
+@media (min-width: 550px) {
     .gallery-container {
         grid-template-columns: repeat(3, 1fr);
         grid-auto-rows: 170px;
+        grid-gap: 5px;
     }
 }
+
 @media (min-width: 1100px) {
     .gallery-container {
         grid-template-columns: repeat(5, 1fr);
@@ -93,7 +132,6 @@
         grid-column-start: span 3;
         grid-row-start: span 2;
     }
-
     .gallery-item:nth-child(14) {
         grid-column-start: span 2;
     }
@@ -107,8 +145,10 @@
     .gallery-item:nth-child(20) {
         grid-column-start: span 1;
     }
-
     .gallery-title {
         font-size: .9rem;
+    }
+    .gallery-download{
+        font-size: 1.5rem;
     }
 }
