--- a/src/app/components/show-image/show-image.component.css
+++ b/src/app/components/show-image/show-image.component.css
@@ -112,7 +112,22 @@
     visibility: visible;
 }
 
+.modal-content{
+    border-radius: 16px;
+    border: none;
+}
 
+.close-modal{
+    position: absolute;
+    top: 0;
+    text-align: start;
+    opacity: .8;
+    font-size: 1.1rem;
+    color: white;
+    margin: 0;
+    padding: 10px 0px;
+    
+}
 /* setting media querys */
 
 @media (min-width: 550px) {
@@ -129,7 +144,7 @@
         grid-auto-rows: 250px;
     }
     .gallery-item:nth-child(1) {
-        grid-column-start: span 3;
+        grid-column-start: span 2;
         grid-row-start: span 2;
     }
     .gallery-item:nth-child(14) {
