--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,13 @@
 <nav class="menu fixed-top">
     <label for="" class="logo" (click)='searchByCategory("")'><img src="../../../assets/image/logo.gif" height="45px" alt="logo de la web"> <span class="ml-2 pt-3" style="font-family: 'Courier New', Courier, monospace">ImgBank</span></label>
     <ul class="menu-items">
-        <li (click)='showAndHideMenu()' (click)='searchByCategory("buildings")'><a href="#gallery">Arquitectura</a></li>
-        <li (click)='showAndHideMenu()' (click)='searchByCategory("sports")'><a href="#gallery">Deportes</a></li>
-        <li (click)='showAndHideMenu()' (click)='searchByCategory("backgrounds")'><a href="#gallery">Fondos</a></li>
-        <li (click)='showAndHideMenu()' (click)='searchByCategory("music")'><a href="#gallery">Musica</a></li>
-        <li (click)='showAndHideMenu()' (click)='searchByCategory("nature")'><a href="#gallery">Naturaleza</a></li>
-        <li (click)='showAndHideMenu()' (click)='searchByCategory("computer")'><a href="#gallery">Tecnología</a></li>
-        <li (click)='showAndHideMenu()' (click)='searchByCategory("travel")'><a href="#gallery">Viaje</a></li>
+        <li (click)='showAndHideMenu(); searchByCategory("buildings")'><a href="#gallery">Arquitectura</a></li>
+        <li (click)='showAndHideMenu(); searchByCategory("sports")'><a href="#gallery">Deportes</a></li>
+        <li (click)='showAndHideMenu(); searchByCategory("backgrounds")'><a href="#gallery">Fondos</a></li>
+        <li (click)='showAndHideMenu(); searchByCategory("music")' ><a href="#gallery">Musica</a></li>
+        <li (click)='showAndHideMenu(); searchByCategory("nature")'><a href="#gallery">Naturaleza</a></li>
+        <li (click)='showAndHideMenu(); searchByCategory("computer")'><a href="#gallery">Tecnología</a></li>
+        <li (click)='showAndHideMenu(); searchByCategory("travel")'><a href="#gallery">Viaje</a></li>
     </ul>
     <span class="btn-menu" (click)='showAndHideMenu()'><i class="fa fa-bars"></i></span>
 </nav>
