--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,21 @@
      outline: 0;
      box-sizing: border-box;
  }
-
+html{
+    scroll-behavior: smooth;
+}
  body{
     font-family: 'Open Sans', sans-serif;
+ }
+
+ .spinner-main{
+     position: absolute;
+     top: 100%;
+     right: 50%;
+ }
+
+ @media (max-width: 790px){
+    .spinner-main{
+        right: 45%;
+    }
  }
