--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,4 @@
 <app-error></app-error>
 <app-show-image [images]='imagesByInput' [images]='imagesByCategory'></app-show-image>
 
-<app-spinner class="spinner-main"></app-spinner>
+<app-spinner></app-spinner>
