--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="menu fixed-top">
-    <label for="" class="logo" (click)='searchByCategory("")'><img src="../../../assets/image/logo.gif" height="45px" alt="logo de la web"> <span class="ml-2 pt-3" style="font-family: 'Courier New', Courier, monospace">ImgBank</span></label>
+    <label for="" class="logo" (click)='searchByCategory("")'><img src="../../../assets/image/logo.gif" height="45px" alt="logo de la web"> <span class="ml-2 pt-3" style="font-family: 'Courier New', Courier, monospace"><a href="#gallery">ImgBank</a></span></label>
     <ul class="menu-items">
         <li (click)='showAndHideMenu(); searchByCategory("buildings")'><a href="#gallery">Arquitectura</a></li>
         <li (click)='showAndHideMenu(); searchByCategory("sports")'><a href="#gallery">Deportes</a></li>
