--- a/src/app/shared/spinner/spinner.component.html
+++ b/src/app/shared/spinner/spinner.component.html
@@ -1,4 +1,4 @@
-<div class="sk-folding-cube" *ngIf='visibility'>
+<div class="sk-folding-cube spinner-main" *ngIf='visibility'>
     <div class="sk-cube1 sk-cube"></div>
     <div class="sk-cube2 sk-cube"></div>
     <div class="sk-cube4 sk-cube"></div>
