--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -16,6 +16,10 @@
     cursor: pointer;
     margin: auto 0;
 }
+.logo a{
+    text-decoration: none;
+    color: #515151;
+}
 
 .menu-items {
     display: flex;
