--- a/src/app/components/search-image/search-image.component.html
+++ b/src/app/components/search-image/search-image.component.html
@@ -27,10 +27,10 @@
 </div>
 <!--End Carousel-->
 
-<div class="container my-5">
-    <form class="text-center form-group row">
-      <input type="text" class="form-control searchInput col-md-9" [(ngModel)]='inputContent' name="inputContent" placeholder="Search images...">
+<div class="container my-5" id="gallery">
+  <form class="text-center form-group row">
+    <input type="text" class="form-control searchInput col-md-9" [(ngModel)]='inputContent' name="inputContent"
+      placeholder="Search images...">
       <input type="submit" class="btn btn-outline-search col-md-2" (click)='getImagesByInput()' value="Search">
-    </form>
-  </div>
-
+  </form>
+</div>
