--- a/src/app/shared/spinner/spinner.component.css
+++ b/src/app/shared/spinner/spinner.component.css
@@ -1,7 +1,7 @@
 .sk-folding-cube {
     margin: 20px auto;
-    width: 40px;
-    height: 40px;
+    width: 70px;
+    height: 70px;
     position: relative;
     -webkit-transform: rotateZ(45deg);
             transform: rotateZ(45deg);
@@ -84,4 +84,33 @@
               transform: perspective(140px) rotateY(180deg);
       opacity: 0; 
     }
+  }
+
+  .spinner-main{
+    position: absolute;
+    top: 100%;
+    right: 50%;
+}
+
+@media (max-width: 782px){
+   .spinner-main{
+       right: 44%;
+   }
+   
+  }
+
+  @media (min-width: 860px){
+    .spinner-main{
+        right: 48%;
+    }
+    
+   }
+
+  @media (max-width:900px) {
+    .sk-folding-cube {
+      width: 50px;
+      height: 50px;
+    }
+
+
   }
